Fix vertical align middle style

--- a/assets/style/partials/_tables.scss
+++ b/assets/style/partials/_tables.scss
@@ -14,6 +14,6 @@
   }
 
   td {
-    vertical-align: center;
+    vertical-align: middle;
   }
 }
